--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="corporate">
   <head>
     <meta charset="UTF-8" name="google-site-verification" content="ZLYNYTjUWXqg9Cvu91LyYaHqgnzxGHe9Wk5cTMx23xo" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/logokarawang.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logokarawang.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profil Desa - Desa Sekarwangi</title>
   </head>
